--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,6 @@ buildDir = 'out'
 dependencies {
     testCompile "org.spockframework:spock-core:1.1-groovy-2.4-rc-2"
 }
-
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
