--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ plugins {
 group 'io.github.znznzn707'
 version '1.0-SNAPSHOT'
 description = 'leetcode learn'
+sourceCompatibility =  JavaVersion.VERSION_1_8
+targetCompatibility =  JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
